[gd_scene load_steps=6 format=3 uid="uid://dopfclcs468gb"]

[ext_resource type="Script" path="res://towers_weapons/weapons/homing_missile/homing_missile.gd" id="1_s4tiu"]
[ext_resource type="Texture2D" uid="uid://b1t5v6y1nnyql" path="res://towers_weapons/assets/towerDefense_tile251.png" id="2_8a55a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x2jo1"]
height = 40.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7jw4c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wkgy4"]

[node name="Missile" type="Node2D"]
script = ExtResource("1_s4tiu")

[node name="Sprite" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_8a55a")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-1, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_x2jo1")

[node name="EnemyDetector" type="Area2D" parent="."]
position = Vector2(42, 0)
collision_mask = 5
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
self_modulate = Color(0.658824, 0, 0.188235, 1)
material = SubResource("ShaderMaterial_7jw4c")
position = Vector2(-42, 0)
scale = Vector2(16.9, 16.9)
shape = SubResource("CircleShape2D_wkgy4")

[node name="AimLine" type="Line2D" parent="." groups=["GVTNavigation"]]
position = Vector2(42, 0)
width = 2.0
default_color = Color(0, 1, 1, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="TargetLine" type="Line2D" parent="." groups=["GVTNavigation"]]
position = Vector2(42, 0)
width = 2.0
default_color = Color(0.666667, 0, 0, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="ChangeLine" type="Line2D" parent="." groups=["GVTNavigation"]]
position = Vector2(42, 0)
width = 2.0
default_color = Color(0, 0.517647, 0.258824, 1)
begin_cap_mode = 2
end_cap_mode = 2
